# cpp-project-template

./: .clang-tidy  .dockerignore  .gitignore  Bootstrap.ps1  Build.ps1  BuildContainerized.ps1  BuildImage.ps1  CMakeLists.txt  CMakePresets.json  ContainerBuild.ps1  Dockerfile_linux  Dockerfile_windows  Package.ps1  README.md  azure-pipelines.yml  bootstrap.ps1  build.ps1  vcpkg.json
.github/workflows/: ci.yml
executable/: CMakeLists.txt
executable/source/: main.cpp
scripts/: Bootstrap.ps1  ClangFormat.ps1  ClangTidy.ps1  CodeCoverage.ps1  Lint.ps1  Package.ps1  RunContainer.ps1  linux.Dockerfile  windows.Dockerfile
